# bananen

./: .gitignore  CHANGELOG.MD  Cargo.toml  README.md  bananen.json  bananen.toml  windows.iss.txt
.devcontainer/: devcontainer.json
.github/workflows/: rust-clippy.yml
docs/: CHANGELOG.MD  _config.yml  get.md  how-to.md  index.md  minimal-outputs.txt
docs/subcommands/: add.md  dub.md
json-schemas/: v3.json
src/: main.rs
yes/: bananen.json
