[package]
name = "bananen"
description= "CLI changelog generator written in Rust"
version = "0.0.3-alpha"
edition = "2021"
repository = "https://github.com/strawmelonjuice/bananen/"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inline_colorization = "0.1.5"
serde = { version = "1.0.104", features = ["derive"] }
toml = "0.7.6"

[package.metadata.bundle]
name = "Bananen!"
identifier = "com.strawmelonjuice.bananentool"
copyright= "By Strawmelonjuice Mar"
category= "Developer Tool"
short_description= "CLI changelog generator written in Rust"