[package]
name = "bananen"
description= "CLI changelog generator written in Rust"
version = "0.1.7-beta2"
edition = "2021"
authors = ["MLC Bloeiman <mar@strawmelonjuice.com>"]
repository = "https://github.com/strawmelonjuice/bananen/"
license = "GPL-3.0"
readme = "README.md"
homepage = "https://strawmelonjuice.com/?p=projects/bananen"
keywords = ["cli", "changelogs", "markdown"]
categories = ["command-line-utilities"]


[dependencies]
inline_colorization = "0.1.5"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.107"